--- a/.github/workflows/nunit-pipeline-external.yml
+++ b/.github/workflows/nunit-pipeline-external.yml
@@ -1,6 +1,9 @@
 name: NUnit Only External
 
 on:
+  schedule:
+    # Runs at 02:00, 08:00, 14:00, 20:00 UTC daily (4× per day)
+    - cron: "0 2,8,14,20 * * *"
   push:
     paths:
       - '.github/workflows/nunit-pipeline-external.yml'
@@ -18,9 +21,9 @@ on:
 
 env:
   PROJECT_NAME: Saucery
-  SOLN_FILE: Saucery.sln                                                                        # full path to your solution file
-  EM_NUNIT_PROJECT: ExternalMerlin.NUnit/ExternalMerlin.NUnit.csproj                            # full path to nunit external integration test project file
-  EM_RD_NUNIT_PROJECT: ExternalMerlin.NUnit.RealDevices/ExternalMerlin.NUnit.RealDevices.csproj # full path to nunit external real device integration test project file
+  SOLN_FILE: Saucery.sln
+  EM_NUNIT_PROJECT: ExternalMerlin.NUnit/ExternalMerlin.NUnit.csproj
+  EM_RD_NUNIT_PROJECT: ExternalMerlin.NUnit.RealDevices/ExternalMerlin.NUnit.RealDevices.csproj
   SAUCE_USER_NAME: ${{ secrets.SAUCE_USER_NAME }}
   SAUCE_API_KEY: ${{ secrets.SAUCE_API_KEY }}
   CONFIG: Release
@@ -29,52 +32,94 @@ permissions:
   contents: write
 
 jobs:
-  nunit-external-tests:
+  detect-changes:
     runs-on: ubuntu-latest
-    
+    outputs:
+      changed: ${{ steps.check.outputs.changed }}
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v5
+      # Restore previously-saved HEAD for this branch (if any)
+      - name: Restore last head cache
+        id: cache
+        uses: actions/cache@v4
+        with:
+          path: .ci/last_sha.txt
+          key: last-sha-${{ github.ref_name }}-${{ github.sha }}
+          restore-keys: |
+            last-sha-${{ github.ref_name }}-
 
-    - name: Setup dotnet
-      uses: actions/setup-dotnet@v5
-      with:
-        # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/9.0)
-        dotnet-version: 9.0.x
+      - name: Checkout (fetch latest commit)
+        uses: actions/checkout@v5
+        with:
+          fetch-depth: 1
 
-    - name: Compile solution
-      run: dotnet build -c ${{ env.CONFIG }}
+      - name: Decide if HEAD changed since prior run
+        id: check
+        shell: bash
+        run: |
+          set -euo pipefail
+          mkdir -p .ci
+          CUR="${GITHUB_SHA}"
+          PREV=""
+          [[ -f .ci/last_sha.txt ]] && PREV="$(cat .ci/last_sha.txt || true)"
+          echo "Current SHA: $CUR"
+          echo "Previous SHA: ${PREV:-<none>}"
 
-    - name: Run External NUnit Integration Tests
-      run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_NUNIT_PROJECT }}
+          if [[ "$CUR" == "$PREV" ]]; then
+            echo "No new commits since the last run on branch ${{ github.ref_name }}."
+            echo "changed=false" >> "$GITHUB_OUTPUT"
+          else
+            echo "New commit detected."
+            echo "changed=true" >> "$GITHUB_OUTPUT"
+          fi
+
+          # Write current SHA so this job's cache step saves it as the new baseline
+          echo "$CUR" > .ci/last_sha.txt
+
+  nunit-external-tests:
+    needs: detect-changes
+    if: ${{ needs.detect-changes.outputs.changed == 'true' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v5
+
+      - name: Setup dotnet
+        uses: actions/setup-dotnet@v5
+        with:
+          dotnet-version: 9.0.x
+
+      - name: Compile solution
+        run: dotnet build -c ${{ env.CONFIG }}
+
+      - name: Run External NUnit Integration Tests
+        run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_NUNIT_PROJECT }}
 
   nunit-real-external-tests:
+    needs: detect-changes
+    if: ${{ needs.detect-changes.outputs.changed == 'true' }}
     runs-on: ubuntu-latest
-    
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v5
+      - name: Checkout Code
+        uses: actions/checkout@v5
 
-    - name: Setup dotnet
-      uses: actions/setup-dotnet@v5
-      with:
-        # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/9.0)
-        dotnet-version: 9.0.x
+      - name: Setup dotnet
+        uses: actions/setup-dotnet@v5
+        with:
+          dotnet-version: 9.0.x
 
-    - name: Compile solution
-      run: dotnet build -c ${{ env.CONFIG }}
+      - name: Compile solution
+        run: dotnet build -c ${{ env.CONFIG }}
 
-    - name: Run External NUnit Real Integration Tests
-      run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_RD_NUNIT_PROJECT }}
+      - name: Run External NUnit Real Integration Tests
+        run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_RD_NUNIT_PROJECT }}
 
   tag:
+    needs: [detect-changes, nunit-external-tests, nunit-real-external-tests]
+    if: ${{ needs.detect-changes.outputs.changed == 'true' && (github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/master') && success() }}
     runs-on: ubuntu-latest
-    needs: [nunit-external-tests,
-            nunit-real-external-tests]
     steps:
-    - name: Bump version and push tag
-      if: ${{ (github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/master') && success() }}
-      id: tag_version
-      uses: mathieudutour/github-tag-action@v6.2
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Bump version and push tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.2
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
