--- a/.github/workflows/xunit3-pipeline-external.yml
+++ b/.github/workflows/xunit3-pipeline-external.yml
@@ -1,6 +1,9 @@
 name: XUnit3 Only External
 
 on:
+  schedule:
+    # Runs at 02:00, 08:00, 14:00, 20:00 UTC daily (4× per day)
+    - cron: "0 2,8,14,20 * * *"
   push:
     paths:
       - '.github/workflows/xunit3-pipeline-external.yml'
@@ -28,7 +31,55 @@ permissions:
   contents: write
 
 jobs:
+  detect-changes:
+    name: Detect if branch HEAD changed since last completed run
+    runs-on: ubuntu-latest
+    # read permissions are enough for the Actions API
+    permissions:
+      actions: read
+      contents: read
+    outputs:
+      changed: ${{ steps.decide.outputs.changed }}
+      previous_sha: ${{ steps.decide.outputs.previous_sha }}
+    steps:
+      - name: Resolve last completed run head_sha for this workflow+branch
+        id: decide
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const { owner, repo } = context.repo;
+            const branch = context.ref.replace('refs/heads/','');  // e.g. "master"
+            // IMPORTANT: set this to the actual workflow file name in your repo
+            const workflow_id = ".github/workflows/xunit-pipeline-external.yml";
+
+            const runs = await github.rest.actions.listWorkflowRuns({
+              owner, repo,
+              workflow_id,
+              branch,
+              status: "completed",
+              per_page: 1
+            });
+
+            const prevSha = runs.data.workflow_runs[0]?.head_sha || "";
+            const curSha = context.sha;
+
+            core.info(`Current SHA:  ${curSha}`);
+            core.info(`Previous SHA: ${prevSha || "<none>"}`);
+
+            const changed = prevSha && prevSha === curSha ? "false" : "true";
+            if (changed === "false") {
+              core.info("No new commits since the last completed run on this branch. Downstream jobs will be skipped.");
+            } else {
+              core.info("New commit (or first run) detected. Downstream jobs will execute.");
+            }
+
+            core.setOutput("changed", changed);
+            core.setOutput("previous_sha", prevSha);
+
   xunit3-external-tests:
+    needs: detect-changes
+    if: ${{ needs.detect-changes.outputs.changed == 'true' }}
     runs-on: ubuntu-latest
     steps:
     - name: Checkout Code
@@ -47,6 +98,8 @@ jobs:
       run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_XUNIT3_PROJECT }} --no-build
 
   xunit3-real-external-tests:
+    needs: detect-changes
+    if: ${{ needs.detect-changes.outputs.changed == 'true' }}
     runs-on: ubuntu-latest
     steps:
     - name: Checkout Code
@@ -65,9 +118,9 @@ jobs:
       run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_RD_XUNIT3_PROJECT }} --no-build
 
   tag:
+    needs: [detect-changes, xunit3-external-tests, xunit3-real-external-tests]
+    if: ${{ needs.detect-changes.outputs.changed == 'true' && (github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/master') && success() }}
     runs-on: ubuntu-latest
-    needs: [xunit3-external-tests,
-            xunit3-real-external-tests]
     steps:
     - name: Bump version and push tag
       if: ${{ (github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/master') && success() }}
