--- a/.github/workflows/xunit3-pipeline.yml
+++ b/.github/workflows/xunit3-pipeline.yml
@@ -167,7 +167,7 @@ jobs:
       uses: actions/upload-artifact@v5
       with:
         name: xunit3-integration-test-results
-        path: ${{ env.XUNIT3_INT_TEST_RESULTS_DIR }}/${{env.XUNIT3_INTEGRATION_COVERAGE_FILENAME}}
+        path: ${{ env.COVERLET_DIR }}/${{env.XUNIT3_INTEGRATION_COVERAGE_FILENAME}}
 
   xunit3-real-integration-tests:
     runs-on: ubuntu-latest
@@ -195,7 +195,7 @@ jobs:
       uses: actions/upload-artifact@v5
       with:
         name: xunit3-real-integration-test-results
-        path: ${{ env.XUNIT3_RD_INT_TEST_RESULTS_DIR }}/${{env.XUNIT3_RD_INTEGRATION_COVERAGE_FILENAME}}
+        path: ${{ env.COVERLET_DIR }}/${{env.XUNIT3_RD_INTEGRATION_COVERAGE_FILENAME}}
 
   # NEW STAGE: Publish Saucery.XUnit.v3 to NuGet if local version is newer than nuget.org
   publish-saucery-xunit3:
