--- a/Saucery.Playwright.NUnit/Saucery.Playwright.NUnit.csproj
+++ b/Saucery.Playwright.NUnit/Saucery.Playwright.NUnit.csproj
@@ -2,38 +2,52 @@
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
-    <IncludeBuildOutput>true</IncludeBuildOutput>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-	  <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
-	  <GenerateRuntimeConfigDevFile>true</GenerateRuntimeConfigDevFile>
+
+    <IncludeBuildOutput>true</IncludeBuildOutput>
+    <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
+    <GenerateRuntimeConfigDevFile>true</GenerateRuntimeConfigDevFile>
+    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
   </PropertyGroup>
 
   <PropertyGroup>
-	  <IsPackable>true</IsPackable>
-	  <PackageId>Saucery</PackageId>
+    <IsPackable>true</IsPackable>
+    <PackageId>Saucery.Playwright.NUnit</PackageId>
     <PackageVersion>4.10.2</PackageVersion>
+
+    <Title>Sorcery for SauceLabs and Playwright.NUnit</Title>
+    <Description>Sorcery for SauceLabs - Unlocking SauceLabs capability</Description>
+
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageProjectUrl>https://github.com/Sauceforge/Saucery</PackageProjectUrl>
+
     <Authors>Andrew Gray</Authors>
     <Company>SauceForge</Company>
     <Copyright>Copyright (c) Andrew Gray 2014</Copyright>
-    <Description>Sorcery for SauceLabs - Unlocking SauceLabs capability</Description>
+
+    <PackageIcon>Saucery.NUnit.128x128.png</PackageIcon>
+    <PackageTags>nunit playwright saucelabs test testing tdd framework assert</PackageTags>
+
+    <RepositoryUrl>https://github.com/Sauceforge/Saucery</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+
     <PackageReleaseNotes>
       ChangeLog:
-      v4.1.1
-      - Initial Release with dependency on Saucery.Core
+      v0.1.0
+      - Initial prerelease package for Playwright.NUnit integration
     </PackageReleaseNotes>
-    <PackageProjectUrl>https://github.com/Sauceforge/Saucery</PackageProjectUrl>
-	  <PackageIcon>Saucery.NUnit.128x128.png</PackageIcon>
-      <PackageTags>nunit saucelabs test testing tdd framework assert</PackageTags>
-	  <Title>Sorcery for SauceLabs and Playwright.NUnit</Title>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" PrivateAssets="All" />
+    <PackageReference Include="NUnit3TestAdapter" Version="6.0.1" PrivateAssets="All" />
     <PackageReference Include="Microsoft.Playwright.NUnit" Version="1.57.0" />
     <PackageReference Include="NUnit" Version="4.4.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="6.0.1" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
+
     <None Include="Images\Saucery.NUnit.128x128.png" Pack="true" PackagePath="\" />
   </ItemGroup>
 
@@ -45,6 +59,7 @@
     <None Update="testhost.runtimeconfig.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
 </Project>
